sc-perf: HasAttrChanged: save unnecessary calls to SfxItemPool::Get()

SfxItemPool::GetItemState() can already return a pointer to a set item so that
doesn't need to be obtained again through SfxItemPool::Get()

tdf#103493 'LotroPlan 3.8.ods'
https://bugs.documentfoundation.org/attachment.cgi?id=128252

         Incl.           Self      Called
Before:
10,210,820,257  1,162,295,513  34,670,201

After:
 9,887,701,235  1,384,985,151  34,670,201

Only ~3% and 0.5% of the overall load time, but..

Change-Id: Icbed8a7982a27472fdfb1dbe4fd2061ab1e601bd